Fixed powers text alignment

--- a/mern/src/components/Characters/Character.css
+++ b/mern/src/components/Characters/Character.css
@@ -1,6 +1,9 @@
 .accordion {
   background-color: #dddedf5b !important;
 }
+.powers {
+  margin-left: -40px;
+}
 
 .characterContainer {
   display: flex;
